--- a/index.html
+++ b/index.html
@@ -3,13 +3,110 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 	<title>Document</title>
 </head>
 <body>
-	<h1> Mama Git push korbo</h1>
-	<h2> Mami Push korbe</h2>
+	<header>
+			<div class="container">
+				<h1> Let’s Help Those Who Are More In Need</h1>
+					<p> Remember that the happiest people are not those getting more, but those giving more </p>
+										<button type="button">More In Need</h1></button>		
+			</div>	
+	</header>
 
-	<h5> Jhankar </h5>
-	<p> onk lazy hoye gesi ekhnon kaj korte hbe </p>
-</body>
-</html>
+
+	<section class="feature">
+		<div class="container">
+			<div class="feature-box">
+				<h1>Donate Today</h1>
+				<p>I am only one, but I am one. I cannot do everything, but I can do something. And I will not let what I cannot do interfere with what I can do. And by the grace of <span class="">Allah</span> </p>	
+			</div>
+		</div>
+		<div>
+			
+		</div>
+		<div class="feature-amount">
+				<div class="amount"><a href="#">100Tk</a></div>
+				<div class="amount"><a href="#">200Tk</a></div>
+				<div class=""><a href="#" class="mid">500Tk</a></div>
+				<div class="amount"><a href="#">1000Tk</a></div>
+				<div class="amount"><a href="#">5000Tk</a></div>
+		</div>
+				<div class="f-box">
+				<p> Other Amount (Taka)</p>
+				<span></span>
+				<button type="button">More In Need</h1></button>
+				</div>
+	</section>
+
+	<section class="plan-section">
+		<div class="container">
+			<h1>Our Donate Plan</h1>
+			<p> You have not lived today until you have done something for someone who can never repay you..</p>
+		</div>
+	</section>
+
+	<section class="cart">
+
+		<div class="container">
+			<div class="chart">
+			<div class="box">
+				<img src="img/food.png" alt="">
+				<h5>Food For a Family</h5>
+				<p>Donation mission is to help prevent Child Hunger and help provide for children who may suffer from the effects of Child Hunger. </p>
+			</div>
+			<div class="box-2">
+				<img src="img/food.png" alt="">
+				<h5>Food For a Family</h5>
+				<p>Donation mission is to help prevent Child Hunger and help provide for children who may suffer from the effects of Child Hunger.</p>
+			</div>
+			<div class="box-3">
+				<img src="img/food.png" alt="">
+				<h5>Food For a Family</h5>
+				<p>Donation mission is to help prevent Child Hunger and help provide for children who may suffer from the effects of Child Hunger. </p>
+			</div>
+		</div>
+		</div>
+	</section>
+		
+
+		<section>
+			<section class="section-end">
+				<div class="our-mission">
+				    <div class="image">
+				        <img src="img/donation13.png" alt="">
+				    </div>
+				    <div class="mission-text">
+				        <h1>Our <span class="mission-span">Mission</span></h1>
+				        <p>With ONE DONATION to the Holiday Fund, You can help meet the tangible needs of families and individuals across New Jersey</p>
+				            <a href="#">Donnat Help Them</a>
+				    </div>
+    
+				</div>
+			</section>
+		</section>
+
+		<section class="email-part">
+			<h1>Give Me A Quick Update</h1>
+			<p>I hope this email finds you well. </p>
+			<div class="subscribe-part">
+				<input type="email" name="Email" id="" placeholder="Email"> <input id="input" type="button" value="subscribe">
+			</div>
+		</section>	
+		
+		<footer>
+			    
+			     <img src="img/donate-today.png" alt="">
+			      <h1> Alhumdulliah</h1>
+
+
+
+
+
+		</footer>
+	</body>
+	</html>
